(fix) fixed AdditionalBlockLincks wrapping

--- a/src/widgets/AdditionalLinksBlock/ui/AdditionalLinksBlock.module.scss
+++ b/src/widgets/AdditionalLinksBlock/ui/AdditionalLinksBlock.module.scss
@@ -2,7 +2,8 @@
   background: no-repeat center url("/assets/backgrounds/leather-bg.png");
   background-size: cover;
   height: 310px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
